added front primary for react

--- a/client/src/assets/stylesheets/base/variables.scss
+++ b/client/src/assets/stylesheets/base/variables.scss
@@ -1,6 +1,6 @@
 //Colors
-$primary-color: #FFF831;
-$secondary-color: #fff;
+$primary-color: #fffffe;
+$secondary-color: #dd7426;
 $alternative-color: #000;
 $primary-hover-color: #FFA500;
 $primary-error-color: #FF0000;
