--- a/client/src/assets/stylesheets/components/main.scss
+++ b/client/src/assets/stylesheets/components/main.scss
@@ -499,3 +499,38 @@
     flex-wrap: wrap;
   }
 }
+
+.workshop-section {
+  // padding: 20px;
+  background-color: #f5f5f5;
+  text-align: center;
+  margin-bottom: 30px;
+  padding: 10px;
+  .workshop-images {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+  }
+
+  .workshop-image {
+      max-width: 100%;
+      height: auto;
+      // flex: 1 1 calc(33.333% - 20px);
+      flex-grow: 1;
+      width: 20%;
+      // margin: 10px;
+  }
+
+  @media (max-width: 768px) {
+      .workshop-image {
+          flex: 1 1 calc(50% - 20px);
+      }
+  }
+
+  @media (max-width: 480px) {
+      .workshop-image {
+          flex: 1 1 100%;
+      }
+  }
+}
